--- a/MainPage.html
+++ b/MainPage.html
@@ -8,7 +8,7 @@
 </div>
 
 <div class="TopBar" style="position: absolute; top: 0; right: 100px;">
-    <title>World Of Students</title>
+    <title >World Of Students</title>
 
     <p style="text-align: center; font-size: 3em;">
         Мир Студентов
@@ -27,8 +27,9 @@
     <p></p>
 </div>
 
-<div class="Footer" style="opacity: 50%; position: absolute; bottom: 0; line-height: 30%;">
-    <p style="opacity: 10%;">Поставте 5 пожалуйста :3</p>
+<div class="Footer" style="opacity: 50%; position: absolute; bottom: 1em; left: 2em; line-height: 30%;">
+    
+    <p style="opacity: 30%;">Поставте 5 пожалуйста :3</p>
     <p>Данный сайт предназначен для домашнего или ознакомительного просмотра!</p>
     <p>Продажа материала запрещена!</p>
     <p>Все права защищены, ни один студент не пострадал!</p>
