--- a/INDEX.html
+++ b/INDEX.html
@@ -585,7 +585,7 @@
       </div>
       <div class="row justify-content-center">
         <div class="col-lg-4 col-md-6 col-sm-12">
-          <img src="img/people.jpg" class="rounded mx-auto d-block" alt="фото">
+          <img src="img/people.jpg" class="rounded mx-auto d-block photo" alt="фото">
           <h4 class="text-center mb-3 mt-3">Кристина Трибой</h4>
           <p>Исмаил, спасибо Вам большое! Очень толковый курс у Вас получился, обучение прошло легко и интересно. Узнала
             много нового, отдельное спасибо за большое количество полезной информации в конце, очень пригодится в работе
@@ -658,7 +658,7 @@
           <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
         </div>
         <div class="modal-body">
-          <div class='embed-container'><iframe src='https://www.youtube.com/embed//41tdjZWeCH0' frameborder='0'
+          <div class='embed-container'><iframe src="https://www.youtube.com/embed/EE-xtCF3T94?si=2xztoGayY5n5Oh42"  frameborder='0'
               allowfullscreen></iframe></div>
         </div>
       </div>
