--- a/INDEX.html
+++ b/INDEX.html
@@ -9,7 +9,7 @@
   <link rel="stylesheet" href="css/bootstrap.min.css">
   <link rel="stylesheet" href="css/fontello.css">
   <link rel="stylesheet" href="css/style.css">
-  <title>Видео курс по вёрстке</title>
+  <title>Видео курс по C#</title>
 </head>
 
 <body>
@@ -18,7 +18,7 @@
     <div class="container">
       <div class="row">
         <div class="col-12">
-          <h1 class="text-center text-white">Видео курс по вёрстке для начинающих HTML & CSS</h1>
+          <h1 class="text-center text-white">Видео курс по C# и XAML для начинающих</h1>
           <div class="itd_play" data-bs-toggle="modal" data-bs-target="#exampleModal">
             <div class="itd_triangle"></div>
           </div>
@@ -28,7 +28,7 @@
     </div>
   </header>
   <!-- О курсе -->
-  <section class="about">
+  <section class="about bg-dark text-white">
     <div class="container">
       <div class="row">
         <div class="col-12">
@@ -38,39 +38,39 @@
       <div class="row">
         <div class="col-xl-4 col-md-6 col-sm-12">
           <div class="itd_circle"><i class="icon-list-numbered"></i></div>
-          <h5 class="text-center">Структурированный материал</h5>
+          <h5 class="text-center">Понятное объяснение</h5>
           <div class="line"></div>
         </div>
         <div class="col-xl-4 col-md-6 col-sm-12">
           <div class="itd_circle"><i class="icon-rouble"></i></div>
-          <h5 class="text-center">Символическая цена</h5>
+          <h5 class="text-center">Можно позволить даже на стипендию</h5>
           <div class="line"></div>
         </div>
         <div class="col-xl-4 col-md-6 col-sm-12">
           <div class="itd_circle"><i class="icon-chart-bar"></i></div>
-          <h5 class="text-center">Пожизненный доступ</h5>
+          <h5 class="text-center">Доступен в любое время</h5>
           <div class="line"></div>
         </div>
         <div class="col-xl-4 col-md-6 col-sm-12">
           <div class="itd_circle"><i class="icon-code"></i></div>
-          <h5 class="text-center">Практические задания</h5>
+          <h5 class="text-center">Практика уже на 1 курсе</h5>
           <div class="line"></div>
         </div>
         <div class="col-xl-4 col-md-6 col-sm-12">
           <div class="itd_circle"><i class="icon-file-video"></i></div>
-          <h5 class="text-center">35 видео уроков (5 часов)</h5>
+          <h5 class="text-center">89 видео уроков (120 часов)</h5>
           <div class="line"></div>
         </div>
         <div class="col-xl-4 col-md-6 col-sm-12">
           <div class="itd_circle"><i class="icon-mobile"></i></div>
-          <h5 class="text-center">Просмотр со смартфона</h5>
+          <h5 class="text-center">Просмотр со смартфона прямо на паре</h5>
           <div class="line"></div>
         </div>
       </div>
     </div>
   </section>
   <!-- Для кого курс -->
-  <section class="forwhom">
+  <section class="forwhom bg-dark text-white">
     <div class="container">
       <div class="row">
         <div class="col-12">
@@ -79,16 +79,16 @@
       </div>
       <div class="row mb-5">
         <div class="col-md-6 col-sm-12">
-          <h5 class="text-center">Хочет научиться создавать сайты своими силами</h5>
+          <h5 class="text-center">Хочет научиться программировать</h5>
         </div>
         <div class="col-md-6 col-sm-12">
-          <h5 class="text-center">Учится современным инструментам разработки</h5>
+          <h5 class="text-center">Учится в группе 1115</h5>
         </div>
         <div class="col-md-6 col-sm-12">
-          <h5 class="text-center">Еще не знает язык HTML и CSS, но хочет выучить</h5>
+          <h5 class="text-center">Хочет отдохнуть от курсовой</h5>
         </div>
         <div class="col-md-6 col-sm-12">
-          <h5 class="text-center">Хочет стать крутым мастером и зарабатывать деньги</h5>
+          <h5 class="text-center">Хочет сдать летнюю сессию</h5>
         </div>
       </div>
       <div class="row">
@@ -99,7 +99,7 @@
     </div>
   </section>
   <!-- Программа курса -->
-  <section class="schedule">
+  <section class="schedule bg-dark">
     <div class="container">
       <div class="row">
         <div class="col-12">
@@ -545,7 +545,7 @@
     </div>
   </section>
   <!-- Об авторе -->
-  <section class="author">
+  <section class="author bg-dark">
     <div class="container">
       <div class="row">
         <div class="col-12">
@@ -576,7 +576,7 @@
     </div>
   </section>
   <!-- Отзывы о курсе -->
-  <section class="reviews">
+  <section class="reviews bg-dark">
     <div class="container">
       <div class="row">
         <div class="col-12">
@@ -600,7 +600,7 @@
     </div>
   </section>
   <!-- Купить -->
-  <section class="buy">
+  <section class="buy bg-dark">
     <div class="container">
       <div class="row">
         <div class="col-12">
