--- a/INDEX.html
+++ b/INDEX.html
@@ -109,7 +109,7 @@
       <div class="row">
         <!-- Первый столбец -->
         <div class="col-md-4 col-sm-12">
-          <h4 class="text-center fw-bold mb-3 mt-3">Модуль 1<br>(HTML)</h4>
+          <h4 class="text-center text-white fw-bold mb-3 mt-3">Модуль 1<br>C#</h4>
           <!-- 1 аккордион -->
           <div class="accordion accordion-flush" id="accordion1">
             <!-- Открытый элемент -->
@@ -128,13 +128,11 @@
             <div class="accordion-item">
               <h2 class="accordion-header" id="heading2">
                 <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
-                  data-bs-target="#collapse2" aria-expanded="false" aria-controls="collapse2">Установка браузера и
-                  редактора кода</button>
+                  data-bs-target="#collapse2" aria-expanded="false" aria-controls="collapse2">Установка VS</button>
               </h2>
               <div id="collapse2" class="accordion-collapse collapse" aria-labelledby="heading2"
                 data-bs-parent="#accordion1">
-                <div class="accordion-body fst-italic">В этом уроке мы установим браузер Google Chrome и редактор кода
-                  VS Code.</div>
+                <div class="accordion-body fst-italic">В этом уроке мы установим Visual Studio.</div>
               </div>
             </div>
 
@@ -142,11 +140,11 @@
               <h2 class="accordion-header fst-italic" id="heading3">
                 <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
                   data-bs-target="#collapse3" aria-expanded="false" aria-controls="collapse3">Обзор функций
-                  редактора</button>
+                  редактора и основы GitHub</button>
               </h2>
               <div id="collapse3" class="accordion-collapse collapse" aria-labelledby="heading3"
                 data-bs-parent="#accordion1">
-                <div class="accordion-body fst-italic">Рассмотрим функции редактора VS Code и узнаем как с ним работать.
+                <div class="accordion-body fst-italic">Рассмотрим функции VS и GitHub и узнаем как с ними работать.
                 </div>
               </div>
             </div>
@@ -154,47 +152,44 @@
             <div class="accordion-item">
               <h2 class="accordion-header" id="heading4">
                 <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
-                  data-bs-target="#collapse4" aria-expanded="false" aria-controls="collapse4">Первые HTML теги</button>
+                  data-bs-target="#collapse4" aria-expanded="false" aria-controls="collapse4">Типы данных и переменные</button>
               </h2>
               <div id="collapse4" class="accordion-collapse collapse" aria-labelledby="heading4"
                 data-bs-parent="#accordion1">
-                <div class="accordion-body fst-italic">Выучим свои первые HTML теги, с помощью которых и создаются любые
-                  сайты.</div>
-              </div>
-            </div>
-
-            <div class="accordion-item">
-              <h2 class="accordion-header" id="heading5">
-                <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
-                  data-bs-target="#collapse5" aria-expanded="false" aria-controls="collapse5">Как задавать путь к
-                  файлу</button>
-              </h2>
-              <div id="collapse5" class="accordion-collapse collapse" aria-labelledby="heading5"
-                data-bs-parent="#accordion1">
-                <div class="accordion-body fst-italic">Научимся правильно указывать путь к файлам изображений и другим
-                  страницам сайта.</div>
+                <div class="accordion-body fst-italic">Выучим какие типы данных есть в C#, а также изучим работу с переменными.</div>
               </div>
             </div>
 
             <div class="accordion-item">
               <h2 class="accordion-header" id="heading6">
                 <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
-                  data-bs-target="#collapse6" aria-expanded="false" aria-controls="collapse6">Создание списка</button>
+                  data-bs-target="#collapse6" aria-expanded="false" aria-controls="collapse6">Массивы и листы</button>
               </h2>
               <div id="collapse6" class="accordion-collapse collapse" aria-labelledby="heading6"
                 data-bs-parent="#accordion1">
-                <div class="accordion-body fst-italic">Научимся создавать списки на своем сайте.</div>
+                <div class="accordion-body fst-italic">Изучим одномерные и многомерные массивы, а также другие хранилища, например лист или словарь.</div>
+              </div>
+            </div>
+
+            <div class="accordion-item">
+              <h2 class="accordion-header" id="heading5">
+                <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                  data-bs-target="#collapse5" aria-expanded="false" aria-controls="collapse5">Условия и циклы</button>
+              </h2>
+              <div id="collapse5" class="accordion-collapse collapse" aria-labelledby="heading5"
+                data-bs-parent="#accordion1">
+                <div class="accordion-body fst-italic">Изучим условные операторы if, case, ?, а также операторы цикллов while, for, foreach.</div>
               </div>
             </div>
 
             <div class="accordion-item">
               <h2 class="accordion-header" id="heading7">
                 <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
-                  data-bs-target="#collapse7" aria-expanded="false" aria-controls="collapse7">Создание таблиц</button>
+                  data-bs-target="#collapse7" aria-expanded="false" aria-controls="collapse7">Работа с файлами</button>
               </h2>
               <div id="collapse7" class="accordion-collapse collapse" aria-labelledby="heading7"
                 data-bs-parent="#accordion1">
-                <div class="accordion-body fst-italic">В этом уроке мы рассмотри, как создавать таблицы на языке HTML.
+                <div class="accordion-body fst-italic">В этом уроке мы рассмотрим работу с файловой системой через Visual Studio.
                 </div>
               </div>
             </div>
