--- a/INDEX.html
+++ b/INDEX.html
@@ -108,7 +108,7 @@
       </div>
       <div class="row">
         <!-- Первый столбец -->
-        <div class="col-md-4 col-sm-12">
+        <div class="col-md-6 col-sm-12">
           <h4 class="text-center text-white fw-bold mb-3 mt-3">Модуль 1<br>C#</h4>
           <!-- 1 аккордион -->
           <div class="accordion accordion-flush" id="accordion1">
@@ -197,48 +197,44 @@
             <div class="accordion-item">
               <h2 class="accordion-header" id="heading8">
                 <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
-                  data-bs-target="#collapse8" aria-expanded="false" aria-controls="collapse8">Работа с текстом</button>
+                  data-bs-target="#collapse8" aria-expanded="false" aria-controls="collapse8">Классы, методы и пространства имён</button>
               </h2>
               <div id="collapse8" class="accordion-collapse collapse" aria-labelledby="heading8"
                 data-bs-parent="#accordion1">
-                <div class="accordion-body fst-italic">В этом видео уроке мы узнаем, как работать с текстом.</div>
+                <div class="accordion-body fst-italic">В этом разделе будет изучена основная структура программ.</div>
               </div>
             </div>
 
             <div class="accordion-item">
               <h2 class="accordion-header" id="heading9">
                 <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
-                  data-bs-target="#collapse9" aria-expanded="false" aria-controls="collapse9">Создание формы</button>
+                  data-bs-target="#collapse9" aria-expanded="false" aria-controls="collapse9">Модификаторы методов, классов.</button>
               </h2>
               <div id="collapse9" class="accordion-collapse collapse" aria-labelledby="heading9"
                 data-bs-parent="#accordion1">
-                <div class="accordion-body fst-italic">Научимся создавать формы для ввода текста, флажки и кнопки.</div>
+                <div class="accordion-body fst-italic">Изучим какие виды модификаторов существуют и для чего они предназначены.</div>
               </div>
             </div>
 
             <div class="accordion-item">
               <h2 class="accordion-header" id="heading10">
                 <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
-                  data-bs-target="#collapse10" aria-expanded="false" aria-controls="collapse10">Универсальные
-                  атрибуты</button>
+                  data-bs-target="#collapse10" aria-expanded="false" aria-controls="collapse10">Основы ООП</button>
               </h2>
               <div id="collapse10" class="accordion-collapse collapse" aria-labelledby="heading10"
                 data-bs-parent="#accordion1">
-                <div class="accordion-body fst-italic">Рассмотрим универсальные атрибуты, которые можно добавлять любому
-                  HTML тегу.</div>
+                <div class="accordion-body fst-italic">Рассмотрим такой подход, как объектно-ориентированное программирование.</div>
               </div>
             </div>
 
             <div class="accordion-item">
               <h2 class="accordion-header" id="heading11">
                 <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
-                  data-bs-target="#collapse11" aria-expanded="false" aria-controls="collapse11">Цвет RGB и
-                  спецсимволы</button>
+                  data-bs-target="#collapse11" aria-expanded="false" aria-controls="collapse11">Паттерны</button>
               </h2>
               <div id="collapse11" class="accordion-collapse collapse" aria-labelledby="heading11"
                 data-bs-parent="#accordion1">
-                <div class="accordion-body fst-italic">Научимся работать с RGB цветом и добавлять специальные символы на
-                  свой сайт.</div>
+                <div class="accordion-body fst-italic">Изучим основные паттерны, облегчающие программирование.</div>
               </div>
             </div>
 
@@ -246,8 +242,8 @@
           <!-- Конец 1 аккордиона -->
         </div>
         <!-- Второй толбец -->
-        <div class="col-md-4 col-sm-12">
-          <h4 class="text-center fw-bold mb-3 mt-3">Модуль 2<br>(CSS)</h4>
+        <div class="col-md-6 col-sm-12">
+          <h4 class="text-center text-white fw-bold mb-3 mt-3">Модуль 2<br>XAML</h4>
 
           <!-- 2 аккордион -->
           <div class="accordion accordion-flush" id="accordion2">
@@ -255,12 +251,11 @@
             <div class="accordion-item">
               <h2 class="accordion-header" id="heading12">
                 <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapse12"
-                  aria-expanded="true" aria-controls="collapse12">CSS селекторы</button>
+                  aria-expanded="true" aria-controls="collapse12">Оконные приложения</button>
               </h2>
               <div id="collapse12" class="accordion-collapse collapse show" aria-labelledby="heading12"
                 data-bs-parent="#accordion2">
-                <div class="accordion-body fst-italic">Рассмотрим основные CSS селекторы, узнаем что это такое и зачем
-                  они нужны.</div>
+                <div class="accordion-body fst-italic">Рассмотрим что такое оконные приложения и другие данные о них.</div>
               </div>
             </div>
             <!-- Закрытые элементы -->
@@ -384,157 +379,6 @@
 
           </div>
           <!-- Конец 2 аккордиона -->
-        </div>
-        <!-- Третий столбец -->
-        <div class="col-md-4 col-sm-12">
-          <h4 class="text-center fw-bold mb-3 mt-3">Модуль 3<br>(Практика)</h4>
-          <!-- 3 аккордион -->
-          <div class="accordion accordion-flush" id="accordion3">
-            <!-- Открытый элемент -->
-            <div class="accordion-item">
-              <h2 class="accordion-header" id="heading22">
-                <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapse22"
-                  aria-expanded="true" aria-controls="collapse22">Верстка меню сайта</button>
-              </h2>
-              <div id="collapse22" class="accordion-collapse collapse show" aria-labelledby="heading22"
-                data-bs-parent="#accordion3">
-                <div class="accordion-body fst-italic">Урок, в котором мы будем верстать фрагмент современного сайта,
-                  используя все полученные ранее знания.</div>
-              </div>
-            </div>
-            <!-- Закрытые элементы -->
-            <div class="accordion-item">
-              <h2 class="accordion-header" id="heading23">
-                <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
-                  data-bs-target="#collapse23" aria-expanded="false" aria-controls="collapse23">Домашнее
-                  задание</button>
-              </h2>
-              <div id="collapse23" class="accordion-collapse collapse" aria-labelledby="heading23"
-                data-bs-parent="#accordion3">
-                <div class="accordion-body fst-italic">Домашнее задание для закрепления изученного материала в
-                  предыдущем уроке.</div>
-              </div>
-            </div>
-
-            <div class="accordion-item">
-              <h2 class="accordion-header fst-italic" id="heading24">
-                <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
-                  data-bs-target="#collapse24" aria-expanded="false" aria-controls="collapse24">Верстке фрагмента
-                  сайта</button>
-              </h2>
-              <div id="collapse24" class="accordion-collapse collapse" aria-labelledby="heading24"
-                data-bs-parent="#accordion3">
-                <div class="accordion-body fst-italic">Урок, в котором мы будем верстать фрагмент современного сайта,
-                  используя все полученные ранее знания.</div>
-              </div>
-            </div>
-
-            <div class="accordion-item">
-              <h2 class="accordion-header" id="heading25">
-                <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
-                  data-bs-target="#collapse25" aria-expanded="false" aria-controls="collapse25">Домашнее
-                  задание</button>
-              </h2>
-              <div id="collapse25" class="accordion-collapse collapse" aria-labelledby="heading25"
-                data-bs-parent="#accordion3">
-                <div class="accordion-body fst-italic">Домашнее задание для закрепления изученного материала в
-                  предыдущем уроке.</div>
-              </div>
-            </div>
-
-            <div class="accordion-item">
-              <h2 class="accordion-header fst-italic" id="heading26">
-                <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
-                  data-bs-target="#collapse26" aria-expanded="false" aria-controls="collapse26">Верстке фрагмента
-                  сайта</button>
-              </h2>
-              <div id="collapse26" class="accordion-collapse collapse" aria-labelledby="heading26"
-                data-bs-parent="#accordion3">
-                <div class="accordion-body fst-italic">Урок, в котором мы будем верстать фрагмент современного сайта,
-                  используя все полученные ранее знания.</div>
-              </div>
-            </div>
-
-            <div class="accordion-item">
-              <h2 class="accordion-header" id="heading27">
-                <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
-                  data-bs-target="#collapse27" aria-expanded="false" aria-controls="collapse27">Домашнее
-                  задание</button>
-              </h2>
-              <div id="collapse27" class="accordion-collapse collapse" aria-labelledby="heading27"
-                data-bs-parent="#accordion3">
-                <div class="accordion-body fst-italic">Домашнее задание для закрепления изученного материала в
-                  предыдущем уроке.</div>
-              </div>
-            </div>
-
-            <div class="accordion-item">
-              <h2 class="accordion-header" id="heading28">
-                <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
-                  data-bs-target="#collapse28" aria-expanded="false" aria-controls="collapse28">Photoshop для
-                  верстальщика</button>
-              </h2>
-              <div id="collapse28" class="accordion-collapse collapse" aria-labelledby="heading28"
-                data-bs-parent="#accordion3">
-                <div class="accordion-body fst-italic">В этом уроке мы рассмотрим графический редактор Photoshop и
-                  научимся основным приемам, которые могут пригодиться верстальщику.</div>
-              </div>
-            </div>
-
-            <div class="accordion-item">
-              <h2 class="accordion-header fst-italic" id="heading29">
-                <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
-                  data-bs-target="#collapse29" aria-expanded="false" aria-controls="collapse29">Верстке фрагмента
-                  сайта</button>
-              </h2>
-              <div id="collapse29" class="accordion-collapse collapse" aria-labelledby="heading29"
-                data-bs-parent="#accordion3">
-                <div class="accordion-body fst-italic">Урок, в котором мы будем верстать фрагмент современного сайта,
-                  используя все полученные ранее знания.</div>
-              </div>
-            </div>
-
-            <div class="accordion-item">
-              <h2 class="accordion-header" id="heading30">
-                <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
-                  data-bs-target="#collapse30" aria-expanded="false" aria-controls="collapse30">Домашнее
-                  задание</button>
-              </h2>
-              <div id="collapse30" class="accordion-collapse collapse" aria-labelledby="heading30"
-                data-bs-parent="#accordion3">
-                <div class="accordion-body fst-italic">Домашнее задание для закрепления изученного материала в
-                  предыдущем уроке.</div>
-              </div>
-            </div>
-
-            <div class="accordion-item">
-              <h2 class="accordion-header" id="heading31">
-                <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
-                  data-bs-target="#collapse31" aria-expanded="false" aria-controls="collapse31">Финальный
-                  проект-задание</button>
-              </h2>
-              <div id="collapse31" class="accordion-collapse collapse" aria-labelledby="heading31"
-                data-bs-parent="#accordion3">
-                <div class="accordion-body fst-italic">Подведение итогов и финальный проект, который вы сможете
-                  выполнить самостоятельно и добавить эту работу себе в портфолио.</div>
-              </div>
-            </div>
-
-            <div class="accordion-item">
-              <h2 class="accordion-header" id="heading32">
-                <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
-                  data-bs-target="#collapse32" aria-expanded="false" aria-controls="collapse32">Бонусы</button>
-              </h2>
-              <div id="collapse32" class="accordion-collapse collapse" aria-labelledby="heading32"
-                data-bs-parent="#accordion3">
-                <div class="accordion-body fst-italic">Вы получите все исходные коды к лекциям и домашним заданиям этого
-                  модуля, дополнительные материалами, которые будут вам полезны при разработке и ссылки на большое
-                  количество проверенных онлайн ресурсов, которые помогут вам при создании сайта.</div>
-              </div>
-            </div>
-
-          </div>
-          <!-- Конец 3 аккордиона -->
         </div>
       </div>
     </div>
