--- a/INDEX.html
+++ b/INDEX.html
@@ -262,49 +262,44 @@
             <div class="accordion-item">
               <h2 class="accordion-header" id="heading13">
                 <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
-                  data-bs-target="#collapse13" aria-expanded="false" aria-controls="collapse13">Работа с
-                  изображениями</button>
+                  data-bs-target="#collapse13" aria-expanded="false" aria-controls="collapse13">Структура приложений</button>
               </h2>
               <div id="collapse13" class="accordion-collapse collapse" aria-labelledby="heading13"
                 data-bs-parent="#accordion2">
-                <div class="accordion-body fst-italic">Научимся работать с изображениями на языке CSS.</div>
+                <div class="accordion-body fst-italic">Изучим структуру оконных приложений.</div>
               </div>
             </div>
 
             <div class="accordion-item">
               <h2 class="accordion-header fst-italic" id="heading14">
                 <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
-                  data-bs-target="#collapse14" aria-expanded="false" aria-controls="collapse14">Границы</button>
+                  data-bs-target="#collapse14" aria-expanded="false" aria-controls="collapse14">Элементы</button>
               </h2>
               <div id="collapse14" class="accordion-collapse collapse" aria-labelledby="heading14"
                 data-bs-parent="#accordion2">
-                <div class="accordion-body fst-italic">В этом уроке мы научимся создавать границы вокруг любого элемента
-                  на сайте и стилизовать их.</div>
+                <div class="accordion-body fst-italic">В этом уроке мы научимся создавать и использовать основные элементы ввода и вывода информации.</div>
               </div>
             </div>
 
             <div class="accordion-item">
               <h2 class="accordion-header" id="heading15">
                 <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
-                  data-bs-target="#collapse15" aria-expanded="false" aria-controls="collapse15">Размеры
-                  элементов</button>
+                  data-bs-target="#collapse15" aria-expanded="false" aria-controls="collapse15">Элементы разметки: Grid и StackPanel</button>
               </h2>
               <div id="collapse15" class="accordion-collapse collapse" aria-labelledby="heading15"
                 data-bs-parent="#accordion2">
-                <div class="accordion-body fst-italic">Разберемся, как изменять размеры элементов на странице с помощью
-                  CSS.</div>
+                <div class="accordion-body fst-italic">Разберемся, как применять сетку и стэкпанель для размещения элементов в окне.</div>
               </div>
             </div>
 
             <div class="accordion-item">
               <h2 class="accordion-header" id="heading16">
                 <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
-                  data-bs-target="#collapse16" aria-expanded="false" aria-controls="collapse16">Работа с
-                  шрифтом</button>
+                  data-bs-target="#collapse16" aria-expanded="false" aria-controls="collapse16">Привязка</button>
               </h2>
               <div id="collapse16" class="accordion-collapse collapse" aria-labelledby="heading16"
                 data-bs-parent="#accordion2">
-                <div class="accordion-body fst-italic">Научимся работать со шрифтами. Установим свой шрифт на сайт.
+                <div class="accordion-body fst-italic">Научимся работать с привязкой данных к свойствам.
                 </div>
               </div>
             </div>
@@ -312,67 +307,33 @@
             <div class="accordion-item">
               <h2 class="accordion-header" id="heading17">
                 <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
-                  data-bs-target="#collapse17" aria-expanded="false" aria-controls="collapse17">Блочная модель
-                  документа</button>
+                  data-bs-target="#collapse17" aria-expanded="false" aria-controls="collapse17">Кнопки</button>
               </h2>
               <div id="collapse17" class="accordion-collapse collapse" aria-labelledby="heading17"
                 data-bs-parent="#accordion2">
-                <div class="accordion-body fst-italic">В этом уроке мы поговорим про блочную модель документа и научимся
-                  пользоваться блочной моделью.</div>
+                <div class="accordion-body fst-italic">В этом уроке мы поговорим про кнопки и их разновидности.</div>
               </div>
             </div>
 
             <div class="accordion-item">
               <h2 class="accordion-header" id="heading18">
                 <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
-                  data-bs-target="#collapse18" aria-expanded="false" aria-controls="collapse18">Псевдоклассы и
-                  псевдоэлементы</button>
+                  data-bs-target="#collapse18" aria-expanded="false" aria-controls="collapse18">Многостраничность</button>
               </h2>
               <div id="collapse18" class="accordion-collapse collapse" aria-labelledby="heading18"
                 data-bs-parent="#accordion2">
-                <div class="accordion-body fst-italic">Псевдоклассы и псевдоэлементы на языке CSS позволяют расширять
-                  основные возможности языка, которые мы уже выучили.</div>
-              </div>
-            </div>
-
-            <div class="accordion-item">
-              <h2 class="accordion-header" id="heading19">
-                <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
-                  data-bs-target="#collapse19" aria-expanded="false" aria-controls="collapse19">CSS Flexbox</button>
-              </h2>
-              <div id="collapse19" class="accordion-collapse collapse" aria-labelledby="heading19"
-                data-bs-parent="#accordion2">
-                <div class="accordion-body fst-italic">В этом уроке мы изучим базовые приемы Flexbox верстки и будем
-                  применять их в следующем модуле.</div>
-              </div>
-            </div>
-
-            <div class="accordion-item">
-              <h2 class="accordion-header" id="heading20">
-                <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
-                  data-bs-target="#collapse20" aria-expanded="false" aria-controls="collapse20">Адаптивная версия
-                  сайта</button>
-              </h2>
-              <div id="collapse20" class="accordion-collapse collapse" aria-labelledby="heading20"
-                data-bs-parent="#accordion2">
-                <div class="accordion-body fst-italic">В этом уроке мы будем учиться создавать адаптивную сетку на CSS.
-                  Так же научимся работать с переменными и функцией calc. Узнаем, как создавать медиа-запросы, чтобы
-                  сделать адаптивную версию своего сайта для мобильных устройств. Научимся создавать макет с
-                  12-колончатой сеткой в Photoshop, сравним нашу сетку с сеткой Bootstrap 5, а так же научимся её
-                  подключать и узнаем как проверять свой сайт на эмуляторе мобильных устроств прямо с браузера на ПК.
-                </div>
+                <div class="accordion-body fst-italic">Рассмотрим, как сделать многостраничность окон, плюсы и минусы такого подхода.</div>
               </div>
             </div>
 
             <div class="accordion-item">
               <h2 class="accordion-header" id="heading21">
                 <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
-                  data-bs-target="#collapse21" aria-expanded="false" aria-controls="collapse21">Домашнее
-                  задание</button>
+                  data-bs-target="#collapse21" aria-expanded="false" aria-controls="collapse21">Итоговый проект</button>
               </h2>
               <div id="collapse21" class="accordion-collapse collapse" aria-labelledby="heading21"
                 data-bs-parent="#accordion2">
-                <div class="accordion-body fst-italic">Задание для практики по теме 'создание адаптивной сетки на CSS'.
+                <div class="accordion-body fst-italic">Задание для практики, чтобы пополнить ваше портфолио.
                 </div>
               </div>
             </div>
