--- a/INDEX.html
+++ b/INDEX.html
@@ -345,7 +345,7 @@
     </div>
   </section>
   <!-- Об авторе -->
-  <section class="author bg-dark">
+  <section class="author text-white bg-dark">
     <div class="container">
       <div class="row">
         <div class="col-12">
@@ -354,20 +354,17 @@
       </div>
       <div class="row">
         <div class="col-xl-9 col-lg-12">
-          <h4>Исмаил Усеинов</h4>
-          <p>Занимаюсь веб-разработкой с 2013 года.</p>
-          <p>В 2017 году основал обучающий YouTube канал ITDoctor. Делюсь своими знаниями в области программирования и
-            создания сайтов. Сформировал свою собственную методику обучения, которая позволяет ученикам максимально
-            эффективно осваивать изучаемый материал.</p>
-          <p>Обучаю языкам HTML, CSS, JavaScript, PHP, работе с препроцессорами, сборщиками и системой контроля версий
-            Git, а также многому другому из мира веб-технологий. Уже более тысячи моих учеников научились создавать
-            сайты самостоятельно и зарабатывать на этом деньги.</p>
-          <p>В этом видео курсе я хочу научить вас основам сайтостроения - это языки HTML и CSS. Эти языки являются
-            основой и знать их должен каждый, кто хочет развиваться в этой области. Вы получите знания, которые нужны в
-            самом начале пути любого веб-разработчика и будите их использовать на протяжение всего своего пути. Вся
+          <h4>Шрек Третьекурсников</h4>
+          <p>Занимаюсь C# и XAML уже долго.</p>
+          <p>В 2022 году поступил в великолепнейшее общеобразовательное учреждение КГА ПОУ ППК.</p>
+          <p>Обучаю языку C# с самых основ, а также могу помочь с некоторымми областями данного языка. Уже почти более нуля моих учеников научились создавать
+            оконные приложения самостоятельно и зарабатывать на этом деньги.</p>
+          <p>В этом видео курсе я хочу научить вас основам программирования - это язык C#. Этот язык является
+            основой и знать его должен каждый С# программист, кто хочет развиваться в этой области. Вы получите знания, которые нужны в
+            самом начале пути любого С# программиста и будите их использовать на протяжение всего своего пути. Вся
             теоретическая информация разложена по полочкам, доступно объясняется и подкрепляется практическими заданиями
             и домашними работами. Курс намерено не содержит лишней информации, тем самым позволяет лучше освоить
-            материал, который действительно важен.</p>
+            материал, который действительно важен в начале вашего пути в ППК.</p>
         </div>
         <div class="col-xl-3 col-lg-12 text-center">
           <img src="img/author.png" class="img-fluid itd_img" alt="Исмаил Усеинов">
