--- a/INDEX.html
+++ b/INDEX.html
@@ -373,7 +373,7 @@
     </div>
   </section>
   <!-- Отзывы о курсе -->
-  <section class="reviews bg-dark">
+  <section class="reviews text-white bg-dark">
     <div class="container">
       <div class="row">
         <div class="col-12">
@@ -384,24 +384,20 @@
         <div class="col-lg-4 col-md-6 col-sm-12">
           <img src="img/people.jpg" class="rounded mx-auto d-block photo" alt="фото">
           <h4 class="text-center mb-3 mt-3">Кристина Трибой</h4>
-          <p>Исмаил, спасибо Вам большое! Очень толковый курс у Вас получился, обучение прошло легко и интересно. Узнала
+          <p>Шрек, спасибо Вам большое! Очень толковый курс у Вас получился, обучение прошло легко и интересно. Узнала
             много нового, отдельное спасибо за большое количество полезной информации в конце, очень пригодится в работе
-            и сэкономит много времени. Очень рада, что открыла для себя Ваш канал.</p>
-          <p>Мне есть с чем сравнить, т.к. начала обучение с 0 по книгам и другим источникам в интернете 6 месяцев назад
-            и уроки на канале ITDoctor могу смело назвать лучшими для новичков. Пересмотрела уже почти все, они очень
-            качественные, хорошо продуманные, не затянутые. Автор всегда на связи, отвечает на вопросы, помогает -
-            просто фантастика! ITDoctor - это уже бренд! С чем Вас, Исмаил и поздравляю!</p>
+            и сэкономит много времени. Очень рада, что открыла для себя Ваш курс.</p>
           <div class="line bg2"></div>
         </div>
       </div>
     </div>
   </section>
   <!-- Купить -->
-  <section class="buy bg-dark">
+  <section class="buy text-white bg-dark">
     <div class="container">
       <div class="row">
         <div class="col-12">
-          <h2 class="text-center text-uppercase color1 mb-5">Курс по HTML & CSS</h2>
+          <h2 class="text-center text-uppercase color1 mb-5">Курс по С# & XAML</h2>
         </div>
       </div>
       <div class="row align-items-center justify-content-center">
@@ -409,17 +405,17 @@
           <img src="img/preview.png" class="img-fluid mx-auto d-block" alt="html+css">
         </div>
         <div class="col-lg-6 col-sm-12">
-          <p>Обучающий курс по изучению языка гипертекстовой разметки HTML и каскадных таблиц стилей CSS от автора
-            образовательного канала ITDoctor. Это практический видеокурс: в каждой главе теоретический материал будет
+          <p>Обучающий курс по изучению языка программирования С# от автора
+            данного курса. Это практический видеокурс: в каждой главе теоретический материал будет
             закрепляться множеством наглядных примеров кода.</p>
           <ul>
-            <li>35 практических уроков</li>
-            <li>Продолжительность 5 часов</li>
+            <li>89 практических уроков</li>
+            <li>Продолжительность 120 часов</li>
             <li>Готовые примеры кода</li>
             <li>Никаких ограничений по времени</li>
-            <li>7 домашних заданий</li>
+            <li>85 домашних заданий</li>
           </ul>
-          <a href="https://stepik.org/z/101175" class="btn btn-itd btn-lg text-uppercase" target="_blank">Купить</a>
+          <a href="https://github.com/Denoos" class="btn btn-itd btn-lg text-uppercase" target="_blank">Купить</a>
         </div>
       </div>
     </div>
@@ -429,18 +425,11 @@
     <div class="container">
       <div class="row">
         <div class="col-12 text-center">
-          <a class="btn btn-outline-light" target="_blank" href="https://www.youtube.com/c/ITDoctor"><i
-              class="icon-youtube-play"></i></a>
-          <a class="btn btn-outline-light" target="_blank"
-            href="mailto:ismail_2016@mail.ru?subject=Вопрос по курсу html+css&body=Здравствуйте, ITDoctor,"><i
-              class="icon-mail-alt"></i></a>
-          <a class="btn btn-outline-light" target="_blank" href="https://t.me/itdoctorstudio"><i
+          <a class="btn btn-outline-light" target="_blank" href="https://web.telegram.org/a/#-1001629357389"><i
               class="icon-paper-plane"></i></a>
-          <a class="btn btn-outline-light" target="_blank" href="https://vk.com/itdoctorstudio"><i
+          <a class="btn btn-outline-light" target="_blank" href="https://vk.com/id667327801"><i
               class="icon-vkontakte"></i></a>
-          <a class="btn btn-outline-light" target="_blank" href="https://instagram.com/ismail_asanovich/"><i
-              class="icon-instagram"></i></a>
-          <a class="btn btn-outline-light" target="_blank" href="https://github.com/morphIsmail"><i
+          <a class="btn btn-outline-light" target="_blank" href="https://github.com/Denoos"><i
               class="icon-github-circled"></i></a>
         </div>
       </div>
